--- a/src/Mod/Assembly/Gui/CMakeLists.txt
+++ b/src/Mod/Assembly/Gui/CMakeLists.txt
@@ -41,9 +41,6 @@ fc_target_copy_resource(AssemblyGui
     InitGui.py)
 
 SET_BIN_DIR(AssemblyGui AssemblyGui /Mod/Assembly)
-if(WIN32)
-    set_target_properties(AssemblyGui PROPERTIES PREFIX "")
-    set_target_properties(AssemblyGui PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(AssemblyGui)
 
 INSTALL(TARGETS AssemblyGui DESTINATION lib)
