--- a/src/Mod/PartDesign/App/CMakeLists.txt
+++ b/src/Mod/PartDesign/App/CMakeLists.txt
@@ -129,10 +129,7 @@ fc_target_copy_resource(PartDesign
 # See link for why this module is installed differently from the other modules:
 # http://forum.freecadweb.org/viewtopic.php?f=19&t=5444
 SET_BIN_DIR(PartDesign PartDesign /Mod/PartDesign /Mod/PartDesign)
-if(WIN32)
-    set_target_properties(PartDesign PROPERTIES PREFIX "")
-    set_target_properties(PartDesign PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(PartDesign)
 
 # The PartDesign module must go to where the __init__.py file is
 INSTALL(TARGETS PartDesign DESTINATION Mod/PartDesign)
