--- a/src/Mod/ReverseEngineering/App/CMakeLists.txt
+++ b/src/Mod/ReverseEngineering/App/CMakeLists.txt
@@ -40,9 +40,6 @@ fc_target_copy_resource(ReverseEngineering
     Init.py)
 
 SET_BIN_DIR(ReverseEngineering ReverseEngineering /Mod/ReverseEngineering)
-if(WIN32)
-    set_target_properties(ReverseEngineering PROPERTIES PREFIX "")
-    set_target_properties(ReverseEngineering PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(ReverseEngineering)
 
 INSTALL(TARGETS ReverseEngineering DESTINATION lib)
