--- a/src/Mod/ReverseEngineering/Gui/CMakeLists.txt
+++ b/src/Mod/ReverseEngineering/Gui/CMakeLists.txt
@@ -47,9 +47,6 @@ fc_target_copy_resource(ReverseEngineeringGui
     InitGui.py)
 
 SET_BIN_DIR(ReverseEngineeringGui ReverseEngineeringGui /Mod/ReverseEngineering)
-if(WIN32)
-    set_target_properties(ReverseEngineeringGui PROPERTIES PREFIX "")
-    set_target_properties(ReverseEngineeringGui PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(ReverseEngineeringGui)
 
 install(TARGETS ReverseEngineeringGui DESTINATION lib)
