--- a/src/Mod/Sandbox/Gui/CMakeLists.txt
+++ b/src/Mod/Sandbox/Gui/CMakeLists.txt
@@ -50,9 +50,6 @@ fc_target_copy_resource(SandboxGui
     InitGui.py)
 
 SET_BIN_DIR(SandboxGui SandboxGui /Mod/Sandbox)
-if(WIN32)
-    set_target_properties(SandboxGui PROPERTIES PREFIX "")
-    set_target_properties(SandboxGui PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(SandboxGui)
 
 INSTALL(TARGETS SandboxGui DESTINATION lib)
