--- a/src/Mod/Sketcher/Gui/CMakeLists.txt
+++ b/src/Mod/Sketcher/Gui/CMakeLists.txt
@@ -115,9 +115,6 @@ fc_target_copy_resource(SketcherGui
     ${SketcherGui_Scripts})
 
 SET_BIN_DIR(SketcherGui SketcherGui /Mod/Sketcher)
-if(WIN32)
-    set_target_properties(SketcherGui PROPERTIES PREFIX "")
-    set_target_properties(SketcherGui PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(SketcherGui)
 
 INSTALL(TARGETS SketcherGui DESTINATION lib)
