--- a/src/Mod/Inspection/Gui/CMakeLists.txt
+++ b/src/Mod/Inspection/Gui/CMakeLists.txt
@@ -60,9 +60,6 @@ fc_target_copy_resource(InspectionGui
     InitGui.py)
 
 SET_BIN_DIR(InspectionGui InspectionGui /Mod/Inspection)
-if(WIN32)
-    set_target_properties(InspectionGui PROPERTIES PREFIX "")
-    set_target_properties(InspectionGui PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(InspectionGui)
 
 INSTALL(TARGETS InspectionGui DESTINATION lib)
