--- a/src/Mod/Mesh/App/CMakeLists.txt
+++ b/src/Mod/Mesh/App/CMakeLists.txt
@@ -352,9 +352,6 @@ fc_target_copy_resource(Mesh
     MeshTestsApp.py)
 
 SET_BIN_DIR(Mesh Mesh /Mod/Mesh)
-if(WIN32)
-    set_target_properties(Mesh PROPERTIES PREFIX "")
-    set_target_properties(Mesh PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(Mesh)
 
 INSTALL(TARGETS Mesh DESTINATION lib)
