--- a/src/Mod/MeshPart/App/CMakeLists.txt
+++ b/src/Mod/MeshPart/App/CMakeLists.txt
@@ -68,9 +68,6 @@ fc_target_copy_resource(MeshPart
     Init.py)
 
 SET_BIN_DIR(MeshPart MeshPart /Mod/MeshPart)
-if(WIN32)
-    set_target_properties(MeshPart PROPERTIES PREFIX "")
-    set_target_properties(MeshPart PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(MeshPart)
 
 INSTALL(TARGETS MeshPart DESTINATION lib)
