--- a/src/Mod/MeshPart/Gui/CMakeLists.txt
+++ b/src/Mod/MeshPart/Gui/CMakeLists.txt
@@ -70,9 +70,6 @@ fc_target_copy_resource(MeshPartGui
     InitGui.py)
 
 SET_BIN_DIR(MeshPartGui MeshPartGui /Mod/MeshPart)
-if(WIN32)
-    set_target_properties(MeshPartGui PROPERTIES PREFIX "")
-    set_target_properties(MeshPartGui PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(MeshPartGui)
 
 INSTALL(TARGETS MeshPartGui DESTINATION lib)
