--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -263,9 +263,6 @@ fc_target_copy_resource(Part
     ${Part_Scripts})
 
 SET_BIN_DIR(Part Part /Mod/Part)
-if(WIN32)
-    set_target_properties(Part PROPERTIES PREFIX "")
-    set_target_properties(Part PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(Part)
 
 INSTALL(TARGETS Part DESTINATION lib)
