--- a/src/Mod/Points/App/CMakeLists.txt
+++ b/src/Mod/Points/App/CMakeLists.txt
@@ -51,9 +51,6 @@ fc_target_copy_resource(Points
     Init.py)
 
 SET_BIN_DIR(Points Points /Mod/Points)
-if(WIN32)
-    set_target_properties(Points PROPERTIES PREFIX "")
-    set_target_properties(Points PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(Points)
 
 INSTALL(TARGETS Points DESTINATION lib)
