--- a/src/Mod/Raytracing/Gui/CMakeLists.txt
+++ b/src/Mod/Raytracing/Gui/CMakeLists.txt
@@ -85,9 +85,6 @@ fc_target_copy_resource(RaytracingGui
     InitGui.py)
 
 SET_BIN_DIR(RaytracingGui RaytracingGui /Mod/Raytracing)
-if(WIN32)
-    set_target_properties(RaytracingGui PROPERTIES PREFIX "")
-    set_target_properties(RaytracingGui PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+SET_PYTHON_PREFIX_SUFFIX(RaytracingGui)
 
 INSTALL(TARGETS RaytracingGui DESTINATION lib)
