--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -678,6 +678,8 @@ IF(MINGW)
 	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mthreads")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mthreads -Wl,--export-all-symbols")
 	SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -mthreads -Wl,--export-all-symbols")
+	# http://stackoverflow.com/questions/8375310/warning-auto-importing-has-been-activated-without-enable-auto-import-specifie
+	SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} --enable-auto-import")
 	LINK_LIBRARIES(-lgdi32)
 ENDIF(MINGW)
 # 0000661: cmake build on Mac OS: dealing with dylib versus so
