--- a/src/3rdParty/salomesmesh/CMakeLists.txt
+++ b/src/3rdParty/salomesmesh/CMakeLists.txt
@@ -368,7 +368,7 @@ if(WIN32)
     )
 else(WIN32)
     INSTALL(TARGETS SMDS Driver DriverSTL DriverDAT DriverUNV SMESHDS SMESH MEFISTO2 StdMeshers
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 endif(WIN32)
 
@@ -380,7 +380,7 @@ if (FREECAD_BUILD_FEM_NETGEN)
         )
     else(WIN32)
         INSTALL(TARGETS NETGENPlugin
-            LIBRARY DESTINATION lib
+            LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         )
     endif(WIN32)
 endif (FREECAD_BUILD_FEM_NETGEN)
