--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -182,10 +182,10 @@ SET_BIN_DIR(FreeCADApp FreeCADApp)
 if(WIN32)
     INSTALL(TARGETS FreeCADApp
         RUNTIME DESTINATION bin
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 else(WIN32)
     INSTALL(TARGETS FreeCADApp
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 endif(WIN32)
