--- a/src/Base/CMakeLists.txt
+++ b/src/Base/CMakeLists.txt
@@ -324,10 +324,10 @@ SET_BIN_DIR(FreeCADBase FreeCADBase)
 if(WIN32)
     INSTALL(TARGETS FreeCADBase
         RUNTIME DESTINATION bin
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 else(WIN32)
     INSTALL(TARGETS FreeCADBase
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 endif(WIN32)
