--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -937,11 +937,11 @@ SET_BIN_DIR(FreeCADGui FreeCADGui)
 if(WIN32)
     INSTALL(TARGETS FreeCADGui
         RUNTIME DESTINATION bin
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 else(WIN32)
     INSTALL(TARGETS FreeCADGui
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
     INSTALL(FILES Icons/freecad.xpm
         Icons/freecad-icon-16.png
