--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -50,7 +50,7 @@ if(FREECAD_BUILD_GUI)
     if(WIN32)
         INSTALL(TARGETS FreeCADMain
             RUNTIME DESTINATION bin
-            LIBRARY DESTINATION lib
+            LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         )
     else(WIN32)
         INSTALL(TARGETS FreeCADMain 
@@ -76,7 +76,7 @@ SET_BIN_DIR(FreeCADMainCmd FreeCADCmd)
 if(WIN32)
     INSTALL(TARGETS FreeCADMainCmd
         RUNTIME DESTINATION bin
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 else(WIN32)
     INSTALL(TARGETS FreeCADMainCmd 
@@ -100,11 +100,11 @@ SET_PYTHON_PREFIX_SUFFIX(FreeCADMainPy)
 if(WIN32)
     INSTALL(TARGETS FreeCADMainPy
         RUNTIME DESTINATION bin
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 else(WIN32)
     INSTALL(TARGETS FreeCADMainPy
-        LIBRARY DESTINATION lib
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 endif(WIN32)
 
@@ -131,11 +131,11 @@ if(FREECAD_BUILD_GUI)
     if(WIN32)
         INSTALL(TARGETS FreeCADGuiPy
             RUNTIME DESTINATION bin
-            LIBRARY DESTINATION lib
+            LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         )
     else(WIN32)
         INSTALL(TARGETS FreeCADGuiPy
-            LIBRARY DESTINATION lib
+            LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         )
     endif(WIN32)
 endif(FREECAD_BUILD_GUI)
