--- a/src/Mod/Cam/App/CMakeLists.txt
+++ b/src/Mod/Cam/App/CMakeLists.txt
@@ -99,4 +99,4 @@ if(WIN32)
     set_target_properties(Cam PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
-INSTALL(TARGETS Cam DESTINATION lib)
+INSTALL(TARGETS Cam DESTINATION ${CMAKE_INSTALL_LIBDIR})
