--- a/src/Mod/Cam/Gui/CMakeLists.txt
+++ b/src/Mod/Cam/Gui/CMakeLists.txt
@@ -76,4 +76,4 @@ if(WIN32)
     set_target_properties(CamGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
-INSTALL(TARGETS CamGui DESTINATION lib)
+INSTALL(TARGETS CamGui DESTINATION ${CMAKE_INSTALL_LIBDIR})
