--- a/src/Mod/Fem/App/CMakeLists.txt
+++ b/src/Mod/Fem/App/CMakeLists.txt
@@ -159,4 +159,4 @@ fc_target_copy_resource(Fem
 SET_BIN_DIR(Fem Fem /Mod/Fem)
 SET_PYTHON_PREFIX_SUFFIX(Fem)
 
-INSTALL(TARGETS Fem DESTINATION lib)
+INSTALL(TARGETS Fem DESTINATION ${CMAKE_INSTALL_LIBDIR})
