--- a/src/Mod/Fem/Gui/CMakeLists.txt
+++ b/src/Mod/Fem/Gui/CMakeLists.txt
@@ -208,4 +208,4 @@ fc_target_copy_resource(FemGui
 SET_BIN_DIR(FemGui FemGui /Mod/Fem)
 SET_PYTHON_PREFIX_SUFFIX(FemGui)
 
-INSTALL(TARGETS FemGui DESTINATION lib)
+INSTALL(TARGETS FemGui DESTINATION ${CMAKE_INSTALL_LIBDIR})
