--- a/src/Mod/Image/App/CMakeLists.txt
+++ b/src/Mod/Image/App/CMakeLists.txt
@@ -40,4 +40,4 @@ fc_target_copy_resource(Image
 SET_BIN_DIR(Image Image /Mod/Image)
 SET_PYTHON_PREFIX_SUFFIX(Image)
 
-INSTALL(TARGETS Image DESTINATION lib)
+INSTALL(TARGETS Image DESTINATION ${CMAKE_INSTALL_LIBDIR})
