--- a/src/Mod/Mesh/App/CMakeLists.txt
+++ b/src/Mod/Mesh/App/CMakeLists.txt
@@ -354,4 +354,4 @@ fc_target_copy_resource(Mesh
 SET_BIN_DIR(Mesh Mesh /Mod/Mesh)
 SET_PYTHON_PREFIX_SUFFIX(Mesh)
 
-INSTALL(TARGETS Mesh DESTINATION lib)
+INSTALL(TARGETS Mesh DESTINATION ${CMAKE_INSTALL_LIBDIR})
