--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -266,4 +266,4 @@ fc_target_copy_resource(Part
 SET_BIN_DIR(Part Part /Mod/Part)
 SET_PYTHON_PREFIX_SUFFIX(Part)
 
-INSTALL(TARGETS Part DESTINATION lib)
+INSTALL(TARGETS Part DESTINATION ${CMAKE_INSTALL_LIBDIR})
