--- a/src/Mod/Part/Gui/CMakeLists.txt
+++ b/src/Mod/Part/Gui/CMakeLists.txt
@@ -234,4 +234,4 @@ fc_target_copy_resource(PartGui
 SET_BIN_DIR(PartGui PartGui /Mod/Part)
 SET_PYTHON_PREFIX_SUFFIX(PartGui)
 
-INSTALL(TARGETS PartGui DESTINATION lib)
+INSTALL(TARGETS PartGui DESTINATION ${CMAKE_INSTALL_LIBDIR})
