--- a/src/Mod/Robot/App/CMakeLists.txt
+++ b/src/Mod/Robot/App/CMakeLists.txt
@@ -142,4 +142,4 @@ fc_target_copy_resource(Robot
 SET_BIN_DIR(Robot Robot /Mod/Robot)
 SET_PYTHON_PREFIX_SUFFIX(Robot)
 
-INSTALL(TARGETS Robot DESTINATION lib)
+INSTALL(TARGETS Robot DESTINATION ${CMAKE_INSTALL_LIBDIR})
