--- a/src/Mod/Start/App/CMakeLists.txt
+++ b/src/Mod/Start/App/CMakeLists.txt
@@ -32,4 +32,4 @@ fc_target_copy_resource(Start
 SET_BIN_DIR(Start Start /Mod/Start)
 SET_PYTHON_PREFIX_SUFFIX(Start)
 
-INSTALL(TARGETS Start DESTINATION lib)
+INSTALL(TARGETS Start DESTINATION ${CMAKE_INSTALL_LIBDIR})
