--- a/src/Mod/Test/Gui/CMakeLists.txt
+++ b/src/Mod/Test/Gui/CMakeLists.txt
@@ -58,6 +58,6 @@ fc_copy_sources(QtUnitGui "${CMAKE_BINARY_DIR}/Mod/Test" qtunittest.py)
 SET_BIN_DIR(QtUnitGui QtUnitGui /Mod/Test)
 SET_PYTHON_PREFIX_SUFFIX(QtUnitGui)
 
-INSTALL(TARGETS QtUnitGui DESTINATION lib)
+INSTALL(TARGETS QtUnitGui DESTINATION ${CMAKE_INSTALL_LIBDIR})
 INSTALL(FILES ${TestGuiPy_SRCS} DESTINATION Mod/Test)
 
