--- a/src/Mod/Web/Gui/CMakeLists.txt
+++ b/src/Mod/Web/Gui/CMakeLists.txt
@@ -46,4 +46,4 @@ fc_target_copy_resource(WebGui
 SET_BIN_DIR(WebGui WebGui /Mod/Web)
 SET_PYTHON_PREFIX_SUFFIX(WebGui)
 
-INSTALL(TARGETS WebGui DESTINATION lib)
+INSTALL(TARGETS WebGui DESTINATION ${CMAKE_INSTALL_LIBDIR})
