--- a/src/Tools/_TEMPLATE_/App/CMakeLists.txt
+++ b/src/Tools/_TEMPLATE_/App/CMakeLists.txt
@@ -30,4 +30,4 @@ fc_target_copy_resource(_TEMPLATE_
 SET_BIN_DIR(_TEMPLATE_ _TEMPLATE_ /Mod/_TEMPLATE_)
 SET_PYTHON_PREFIX_SUFFIX(_TEMPLATE_)
 
-install(TARGETS _TEMPLATE_ DESTINATION lib)
+install(TARGETS _TEMPLATE_ DESTINATION ${CMAKE_INSTALL_LIBDIR})
