--- a/src/Tools/_TEMPLATE_/Gui/CMakeLists.txt
+++ b/src/Tools/_TEMPLATE_/Gui/CMakeLists.txt
@@ -40,4 +40,4 @@ fc_target_copy_resource(_TEMPLATE_Gui
 SET_BIN_DIR(_TEMPLATE_Gui _TEMPLATE_Gui /Mod/_TEMPLATE_)
 SET_PYTHON_PREFIX_SUFFIX(_TEMPLATE_Gui)
     
-install(TARGETS _TEMPLATE_Gui DESTINATION lib)
+install(TARGETS _TEMPLATE_Gui DESTINATION ${CMAKE_INSTALL_LIBDIR})
