Have cmake set doxygen to use dot if it's available.
Also a minor typos

--- a/src/Doc/BuildDevDoc.cfg.in
+++ b/src/Doc/BuildDevDoc.cfg.in
@@ -1566,7 +1566,7 @@ HIDE_UNDOC_RELATIONS   = YES
 # toolkit from AT&T and Lucent Bell Labs. The other options in this section
 # have no effect if this option is set to NO (the default)
 
-HAVE_DOT               = NO
+HAVE_DOT               = @HAVE_DOT@
 
 # The DOT_NUM_THREADS specifies the number of dot invocations doxygen is
 # allowed to run in parallel. When set to 0 (the default) doxygen will
