--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -1,12 +1,16 @@
 #add_subdirectory(Icons)
 
 if(WIN32)
-add_definitions(-DFCGui -DQIIS_MAKEDLL)
+    add_definitions(-DFCGui -DQIIS_MAKEDLL -DOVR_OS_WIN32)
 endif(WIN32)
 
 if (FREECAD_USE_3DCONNEXION)
-add_definitions(-D_USE_3DCONNEXION_SDK)
+    add_definitions(-D_USE_3DCONNEXION_SDK)
 endif(FREECAD_USE_3DCONNEXION)
+
+if (OCULUS_FOUND)
+    add_definitions(-D_USE_OCULUS_RIFT_SDK )
+endif(OCULUS_FOUND)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
@@ -59,6 +63,17 @@ IF(SPNAV_FOUND)
         ${SPNAV_LIBRARIES}
     )
 ENDIF(SPNAV_FOUND)
+
+IF(OCULUS_FOUND)
+    add_definitions(-DOCULUS_FOUND)
+    include_directories(
+        ${OCULUS_INCLUDE_DIRS}
+    )
+    set(FreeCADGui_LIBS
+        ${FreeCADGui_LIBS}
+        ${OCULUS_LIBRARIES}
+    )
+ENDIF(OCULUS_FOUND)
 
 if(SHIBOKEN_INCLUDE_DIR)
     add_definitions(-DHAVE_SHIBOKEN)
@@ -643,6 +658,7 @@ SET(View3D_CPP_SRCS
     View3DInventor.cpp
     View3DInventorExamples.cpp
     View3DInventorViewer.cpp
+    View3DInventorRiftViewer.cpp
     View3DPy.cpp
 )
 SET(View3D_SRCS
